k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-platform-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-platform-app
  template:
    metadata:
      labels:
        app: eks-platform-app
    spec:
      containers:
        - name: app
          image: 277089531535.dkr.ecr.us-east-2.amazonaws.com/eks-platform-app:latest
          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
