k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-platform-app
spec:
  type: ClusterIP
  selector:
    app: eks-platform-app
  ports:
    - port: 80
      targetPort: 5000
